css/style.css
/* ... */
.bold {
  font-weight: var(--fw-bold);
}

.blue span {
  background-color: var(--blue-300);
}

.blue-300 {
  color: var(--blue-300);
}


/* Background */
body {
  height: 100dvh;
  display: grid;
  grid-template-rows: auto 1fr;

  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

main {
  min-height: 0;
}


/* --- Home --- */
body.home {
  background-image: url('../assets/home/background-home-mobile.jpg');
}
@media (min-width: 650px) {
  body.home {
    background-image: url('../assets/home/background-home-tablet.jpg');
  }
}
@media (min-width: 1100px) {
  body.home {
    background-image: url('../assets/home/background-home-desktop.jpg');
  }
}

/* --- Destination --- */
body.destination {
  background-image: url("../assets/destination/background-destination-mobile.jpg");
}
@media (min-width: 650px) {
  body.destination {
    background-image: url("../assets/destination/background-destination-tablet.jpg");
  }
}
@media (min-width: 1100px) {
  body.destination {
    background-image: url("../assets/destination/background-destination-desktop.jpg");
  }
}

/* --- Crew --- */
body.crew {
  background-image: url("../assets/crew/background-crew-mobile.jpg");
}
@media (min-width: 650px) {
  body.crew {
    background-image: url("../assets/crew/background-crew-tablet.jpg");
  }
}
@media (min-width: 1100px) {
  body.crew {
    background-image: url("../assets/crew/background-crew-desktop.jpg");
  }
}

/* --- Technology --- */
body.technology {
  background-image: url("../assets/technology/background-technology-mobile.jpg");
}
@media (min-width: 650px) {
  body.technology {
    background-image: url("../assets/technology/background-technology-tablet.jpg");
  }
}
@media (min-width: 1100px) {
  body.technology {
    background-image: url("../assets/technology/background-technology-desktop.jpg");
  }
}

.spacer {
  margin-block: var(--space-24);
  height: 1px;
  width: 100%;
  background-color: var(--grey);
}

/* =========================================
   NAVIGATION
   ========================================= */

.header-wrapper {
  margin: 0;
    display: grid;
    grid-template-columns:
      [full-start] 24px
      [content-start] auto   /* Logo */
      1fr                    /* Lücke */
      [nav-start] auto       /* Nav-Inhalt */
      [content-end] 24px
      [full-end];

    align-items: center;


  margin-block: var(--space-24);
}
.logo {
  grid-column: content-start / content-end;
  grid-row: 1;
}
nav {
  grid-column: nav-start / content-end;
  grid-row: 1;
}

/* Burger-Menu */
.nav__toggle {
  display: flex;
  flex-direction: column;

  gap: var(--space-6);
  position: relative;
  z-index: 999;
}

.burger-line {
  background-color: var(--white);
  width: 1.5rem;
  height: 0.1875rem;

  transition: all 0.3s ease-in-out;
}

.nav__toggle.nav-open .burger-line:first-child {
  transform: translateY(0.5625rem) rotate(45deg);
}

.nav__toggle.nav-open .burger-line:nth-child(2) {
  opacity: 0;
}

.nav__toggle.nav-open .burger-line:last-child {
  transform: translateY(-0.5625rem) rotate(-45deg);
}


/* drawer */
.nav__drawer {
  position: fixed;
  top: 0;
  right: 0;
  height: 100vh;
  width: 68%;

  backdrop-filter: blur(40px);
  -webkit-backdrop-filter: blur(20px);
  z-index: 100;
}

.nav__menu {
  display: flex;
  flex-direction: column;
  gap: var(--space-32);

  margin-top: 133px;
  padding-inline: var(--space-32);
}

.nav__menu a {
  display: flex;
  gap: 12px;
  align-items: center;
  width: fit-content;
}

.nav__link {
  position: relative;
  display: flex;
  transition: all 0.3s ease-in-out;
}

.nav__menu li {
  position: relative;
}

.nav__menu li:has(.nav__link.is-active)::before {
  content: "";
  position: absolute;
  top: 0;
  right: -32px;

  width: 3px;
  height: 100%;
  background-color: var(--white);
}

.nav__link:hover {
  color: var(--blue-300);
  
}

.nav__indicator {
  position: absolute;
  left: 0;
  bottom: 0;
  height: 3px;
  background-color: var(--white);
  opacity: 0;
  pointer-events: none;
}




/* =========================================
   LANDINGPAGE
   ========================================= */

.landingpage {
  display: grid;
  padding-block: clamp(var(--space-24), 5vw, var(--space-128));
}

.hero {
  display: flex;
  flex-direction: column;
}

.hero__content {
  display: flex;
  flex-direction: column;
  gap: var(--space-24);

  justify-content: center;
  align-items: center;

  text-align: center;
}

.hero__btn-container {
  display: flex;
  justify-content: center;

  padding-block: 119px;

}

.hero__btn {
  width: 144px;
  height: 144px;
  border-radius: 50%;

  background-color: var(--white);
  color: var(--blue-900);
}


.hero__btn:hover {
  box-shadow: 0 0 0 88px rgba(255,255,255,0.2);
}





/* =========================================
   Destination
   ========================================= */
.destinations {
  padding-block: var(--space-24);
}

.destinations__heading {
  display: flex;
  gap: var(--space-24);
  justify-content: center;
  align-items: center;
}
.destinations__heading span {
  opacity: .25;
}

.destinations__image-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: var(--space-24);

  padding-block: 26.5px;
}

.destinations__image-container img {
  width: 150px;
  height: 150px;
}

.destination__links {
  margin-top: var(--space-32);
  padding-bottom: 15px;
}

.destinations__nav-link {
  position: relative;
  color: var(--blue-300);
}

.destinations__nav-link.is-active {
  color: var(--white);
}

.destinations__nav-link.is-active::after {
  content: "";
  width: 100%;
  height: 3px;
  position: absolute;
  left: 0;
  bottom: -15px;

  background-color: var(--white);
}

.destinations__nav {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: var(--space-32);
  position: relative;
}
/* ... */

